--- a/package.json
+++ b/package.json
@@ -1,66 +1,45 @@
 {
-  "name": "angular-rest-client",
-  "version": "2.0.0",
-  "description": "Angular 5 HTTP client with Typescript Declarative Annotations, Observables, Interceptors and Timeouts.",
+  "name": "typescript-rest-client",
+  "version": "0.0.1-SNAPSHOT",
+  "description": "Generic HTTP client with Typescript Declarative Annotations, Observables, Interceptors and Timeouts.",
   "main": "index.js",
   "scripts": {
-    "setup": "yarn --freeze-lockfile",
-    "test": "node_modules/.bin/gulp test",
-    "watch": "node_modules/.bin/gulp default",
-    "prepublish": "node_modules/.bin/gulp prepublish",
-    "codecov": "./node_modules/.bin/codecov"
+    "lint": "tslint --project .",
+    "build": "tsc"
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/steven166/angular-rest-client.git"
+    "url": "git+https://github.com/mcailleaux/typescript-rest-client.git"
   },
   "keywords": [
-    "angular5",
-    "angulario",
     "http",
     "rest",
     "client"
   ],
-  "author": "Steven Hermans <s.hermans@maxxton.com>",
-  "contributors": [
-    {
-      "name": "Mayur Patel <mayur-novus>"
-    }
-  ],
+  "author": "Matthieu CAILLEAUX",
+  "contributors": [],
   "license": "MIT",
   "bugs": {
-    "url": "https://github.com/steven166/angular-rest-client/issues"
+    "url": "https://github.com/mcailleaux/typescript-rest-client/issues"
   },
-  "homepage": "https://github.com/steven166/angular-rest-client#readme",
+  "homepage": "https://github.com/mcailleaux/typescript-rest-client#readme",
   "dependencies": {
-    "@angular/common": "^5.0.0",
-    "@angular/core": "^5.0.0",
-    "@angular/platform-browser": "^5.0.0",
-    "rxjs": "5.5.0",
-    "zone.js": "0.8.4"
+    "rxjs": "^6.6.3",
+    "zone.js": "^0.11.1"
   },
   "devDependencies": {
-    "@angular/compiler": "^5.0.0",
-    "@types/chai": "^3.4.34",
-    "@types/jasmine": "^2.5.41",
-    "@types/node": "^6.0.45",
-    "async": "^2.1.1",
-    "chai": "^3.5.0",
-    "codecov": "^3.0.0",
-    "codelyzer": "^2.0.1",
-    "del": "^2.2.2",
-    "gaze": "^1.1.2",
-    "gulp": "^3.9.0",
-    "gulp-html-extend": "^1.1.6",
-    "gulp-istanbul": "^1.1.2",
-    "gulp-mocha": "^3.0.1",
-    "gulp-replace": "^0.5.4",
-    "gulp-typescript": "3.1.3",
-    "gulp-util": "^3.0.7",
-    "merge2": "^1.0.2",
-    "ts-node": "^2.0.0",
-    "tslint": "^4.3.0",
-    "typescript": "^2.6.2",
-    "vinyl-paths": "^2.1.0"
+    "@types/node": "^14.6.4",
+    "ts-node": "^9.0.0",
+    "typescript": "^3.9.7",
+    "husky": "^4.3.0",
+    "prettier": "^2.1.1",
+    "pretty-quick": "^3.0.1",
+    "codelyzer": "^6.0.0",
+    "tslint": "^6.1.3"
+  },
+  "husky": {
+    "hooks": {
+      "pre-commit": "pretty-quick --staged"
+    }
   }
 }
