--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,43 +1,24 @@
 {
   "compilerOptions": {
-    "target": "es5",
-    "module": "commonjs",
+    "outDir": "dist",
     "moduleResolution": "node",
-    "declaration": false,
-    "removeComments": true,
-    "noLib": false,
-    "emitDecoratorMetadata": true,
-    "experimentalDecorators": true,
-    "lib": [
-      "es2015",
-      "dom",
-      "dom.iterable",
-      "scripthost"
-    ],
-    "sourceMap": true,
+    "module": "commonjs",
+    "target": "es6",
+    "lib": ["dom", "es2015", "es2016", "es2017"],
+    "strict": true,
+    "allowSyntheticDefaultImports": true,
+    "suppressImplicitAnyIndexErrors": true,
+    "forceConsistentCasingInFileNames": true,
+    "strictPropertyInitialization": false,
+    "strictNullChecks": false,
     "pretty": true,
-    "allowUnreachableCode": false,
-    "allowUnusedLabels": false,
-    "noImplicitAny": true,
-    "noImplicitReturns": true,
-    "noImplicitUseStrict": false,
-    "noFallthroughCasesInSwitch": true,
-    "typeRoots": [
-      "./node_modules/@types",
-      "./node_modules"
-    ],
-    "types": [
-      "node"
-    ]
+    "sourceMap": true,
+    "declaration": true,
+    "stripInternal": true,
+    "skipLibCheck": true
   },
-  "files": [
-    "gulpfile.ts",
-  ],
-  "exclude": [
-    "desktop",
-    "node_modules",
-    "dist",
-    "src"
-  ],
-  "compileOnSave": false
+  "exclude": ["node_modules"],
+  "compileOnSave": false,
+  "buildOnSave": false,
+  "files": ["index.ts"]
 }
