--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
   "name": "typescript-rest-client",
-  "version": "1.0.4-SNAPSHOT",
+  "version": "1.0.5-SNAPSHOT",
   "description": "Generic HTTP client with Typescript Declarative Annotations, Observables, Interceptors and Timeouts.",
-  "main": "index.js",
+  "main": "dist/index.js",
   "files": [
     "dist"
   ],
