--- a/package.json
+++ b/package.json
@@ -1,11 +1,8 @@
 {
   "name": "typescript-rest-client",
-  "version": "1.0.5-SNAPSHOT",
+  "version": "1.0.8-SNAPSHOT",
   "description": "Generic HTTP client with Typescript Declarative Annotations, Observables, Interceptors and Timeouts.",
-  "main": "dist/index.js",
-  "files": [
-    "dist"
-  ],
+  "main": "index.js",
   "scripts": {
     "lint": "tslint --project .",
     "build": "tsc"
