--- a/tsconfig.json
+++ b/tsconfig.json
@@ -2,9 +2,9 @@
   "compilerOptions": {
     "outDir": "dist",
     "moduleResolution": "node",
-    "module": "commonjs",
-    "target": "es6",
-    "lib": ["dom", "es2015", "es2016", "es2017"],
+    "module": "esnext",
+    "target": "es2015",
+    "lib": ["dom", "es2017"],
     "strict": true,
     "allowSyntheticDefaultImports": true,
     "suppressImplicitAnyIndexErrors": true,
