--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,21 +1,19 @@
 {
   "compilerOptions": {
     "outDir": "dist",
-    "moduleResolution": "node",
-    "module": "esnext",
-    "target": "es2015",
-    "lib": ["dom", "es2017"],
-    "strict": true,
-    "allowSyntheticDefaultImports": true,
-    "suppressImplicitAnyIndexErrors": true,
-    "forceConsistentCasingInFileNames": true,
-    "strictPropertyInitialization": false,
-    "strictNullChecks": false,
-    "pretty": true,
     "sourceMap": true,
     "declaration": true,
-    "stripInternal": true,
-    "skipLibCheck": true
+    "moduleResolution": "node",
+    "emitDecoratorMetadata": true,
+    "experimentalDecorators": true,
+    "importHelpers": true,
+    "target": "es2015",
+    "module": "esnext",
+    "typeRoots": ["node_modules/@types"],
+    "lib": ["es2017", "dom"],
+    "skipLibCheck": true,
+    "skipDefaultLibCheck": true,
+    "resolveJsonModule": true
   },
   "exclude": ["node_modules"],
   "compileOnSave": false,
