--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,19 +1,17 @@
 {
   "compilerOptions": {
     "outDir": "dist",
-    "sourceMap": true,
+    "module": "commonjs",
     "declaration": true,
-    "moduleResolution": "node",
+    "noImplicitAny": false,
+    "removeComments": true,
+    "noLib": false,
     "emitDecoratorMetadata": true,
     "experimentalDecorators": true,
-    "importHelpers": true,
-    "target": "es2015",
-    "module": "esnext",
-    "typeRoots": ["node_modules/@types"],
-    "lib": ["es2017", "dom"],
-    "skipLibCheck": true,
-    "skipDefaultLibCheck": true,
-    "resolveJsonModule": true
+    "target": "es6",
+    "sourceMap": false,
+    "strict": false,
+    "strictPropertyInitialization": false
   },
   "exclude": ["node_modules"],
   "compileOnSave": false,
