--- a/tsconfig.json
+++ b/tsconfig.json
@@ -9,6 +9,7 @@
     "emitDecoratorMetadata": true,
     "experimentalDecorators": true,
     "target": "es6",
+    "lib": ["es2017"],
     "sourceMap": false,
     "strict": false,
     "strictPropertyInitialization": false
