--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -1,4 +1,4 @@
-image: docker-repository-no.asi.fr/asi/ci-builder-node10:1.0
+image: docker-repository-no.asi.fr/asi/ci-builder-node14:1.0
 
 stages:
   - build
@@ -20,6 +20,30 @@ quality:
     paths:
       - dist
 
+publish:
+  stage: publish
+  when: manual
+  script:
+    - sh ./package.sh
+  rules:
+    - if: '$CI_COMMIT_TAG != null' #only on tags
+      when: on_success
+
+release_patch:
+  extends: .release
+  variables:
+    VERSION: patch
+
+release_minor:
+  extends: .release
+  variables:
+    VERSION: minor
+
+release_major:
+  extends: .release
+  variables:
+    VERSION: major
+
 .build:
   stage: build
   before_script:
@@ -31,3 +55,11 @@ quality:
       - node_modules
       - dist
     expire_in: 1 day
+
+.release:
+  stage: release
+  when: manual
+  script:
+    - /scripts/release.sh $VERSION
+  only:
+    - /^master$/
