--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -22,12 +22,11 @@ quality:
 
 publish:
   stage: publish
-  when: manual
   script:
     - sh ./package.sh
   rules:
-    - if: '$CI_COMMIT_TAG != null' #only on tags
-      when: on_success
+    - if: '$CI_COMMIT_TAG == null' #only on tags
+      when: manual
 
 release_patch:
   extends: .release
