publish and release

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -3,8 +3,7 @@ image: docker-repository-no.asi.fr/asi/ci-builder-node14:1.0
 stages:
   - build
   - quality
-  - publish
-  - release
+  - publish + realease
 
 variables:
   GIT_STRATEGY: fetch
