--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -24,8 +24,10 @@ publish:
   script:
     - sh ./package.sh
   rules:
-    - if: '$CI_COMMIT_TAG == null' #only on tags
+    - if: '$CI_COMMIT_TAG == null' #all not tags
       when: manual
+    - if: '$CI_COMMIT_TAG != null' #only on tags
+      when: on_success
 
 release_patch:
   extends: .release
