--- a/examples/angular/package.json
+++ b/examples/angular/package.json
@@ -29,7 +29,7 @@
     "tslib": "~2.0.1",
     "zone.js": "~0.11.1",
     "uuid": "~3.4.0",
-    "typescript-rest-client": "^1.0.29-SNAPSHOT"
+    "typescript-rest-client": "^1.0.33"
   },
   "devDependencies": {
     "@angular-devkit/build-angular": "~0.1001.1",
