--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -23,7 +23,7 @@ publish:
   stage: publish_release
   script:
     - npm-cli-login
-    - sh ./package.sh
+    - sh ./package-ci.sh
   rules:
     - if: '$CI_COMMIT_TAG == null' #all not tags
       when: manual
