--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -22,7 +22,7 @@ quality:
 publish:
   stage: publish_release
   script:
-    - npm-cli-login -s @asi-team
+    - npm-cli-login
     - sh ./package-ci.sh
   rules:
     - if: '$CI_COMMIT_TAG == null' #all not tags
